# pdf-parser

./: .gitignore  README.md  app.py  main.py  pyproject.toml
exparso/llm/: openai.py
exparso/model/: cost.py  document.py
pdf_services/: __init__.py
pdf_services/models/: __init__.py  document.py
pdf_services/pdf_parser/: __init__.py  enhanced_parser.py
pdf_services/utils/: __init__.py  image_utils.py  text_utils.py
templates/: index.html
